# mini_project_django

./: db.sqlite3  manage.py  pyproject.toml
fine_project/: asgi.py  settings.py  wsgi.py
quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes/migrations/: 0001_initial.py  0002_alter_author_id.py  0002_alter_quote_id.py  0003_alter_author_id_alter_quote_id.py  0004_alter_author_id_alter_quote_id.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html
quotes/templatetags/: extract.py
users/: forms.py  urls.py  views.py
users/static/quotes/: style.css
users/templates/users/: login.html  password_reset_confirm.html  signup.html
utils/: add_quotes_to_mongo.py  migration.py  migration_2.py
