[tool.poetry]
name = "mini-project-django"
version = "0.1.0"
description = ""
authors = ["Ivan-Danyleiko <vanyadanuleyko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
